--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li>
                             <a class="navbar-brand" asp-area="" asp-controller="Equipe" asp-action="Index">Equipes</a>
                         </li>
+                        <li>
+                            <a class="navbar-brand" asp-area="" asp-controller="Noticias" asp-action="Index">Noticias</a>
+                        </li>
                     </ul>
                 </div>
             </div>
